--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,28 +18,22 @@
     </ul>
   </div>
 </div>
-
+<!-- 
 <ngb-tabset>
   <ngb-tab title="x"></ngb-tab>
   <ngb-tab title="Inicio">
     <ng-template ngbTabContent>
-      <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth
-      master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh
-      dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid.</p>
     </ng-template>
   </ngb-tab>
  
   <ngb-tab title="Quienes somos?" >
     <ng-template ngbTabContent>
-      <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id diam. Nulla facilisi.   Morbi ut bibendum est, eu tincidunt odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
     </ng-template>
   </ngb-tab>
 
   <ngb-tab title="Contacto" >
     <ng-template ngbTabContent>
-      <p>Calle Fco. I. Madero 15, Col. Tlalpan Centro, C.P. 14000, Ciudad de México, D.F.</p>
-      <p>Telefonos: 8120386473 - 8192736475 - 8182636486</p>
-      <p><a>Facebook</a> - <a>Twitter</a> - <a>Instagram</a> </p>
+
     </ng-template>
   </ngb-tab>
-</ngb-tabset>
+</ngb-tabset> -->
