--- a/src/app/components/report/report.component.html
+++ b/src/app/components/report/report.component.html
@@ -50,7 +50,7 @@
                 <label class="col-md-12 control-label" for="incident-address">Direccion de {{incidente}}:</label>
                 <div class="col-md-12">
                   <div class="input-group">
-                    <input id="incident-address" name="incident-address" class="form-control" type="text" placeholder="Calle # ext, Colonia, Municipio." required="">
+                    <input id="incident-address" name="incident-address" class="form-control" type="text" placeholder="Calle # ext, Colonia, Municipio." > 
                         <span class="input-group-addon">     
                         <input type="checkbox" checked="checked">     
                     </span>
