--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-
+<div class="container">
 <router-outlet></router-outlet>
 <app-header></app-header>
 <app-map></app-map>
 <app-aside></app-aside>
 <app-footer></app-footer>
+</div>
