--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -49,7 +49,7 @@
             <div class="col-md-12">
               <button id="signup-button" name="signup-button" class="btn btn-outline-primary space">Acceder</button>
               <span> </span>
-              <button type="button" class="btn btn-outline-dark space" (click) = "modal.close()" >Cancelar</button>
+              <button type="button" class="btn btn-outline-dark space">Cancelar</button>
 
             </div>
           </div>
