admin component added

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
           <!-- Text input-->
           <div class="form-group">
             <div class="col-md-12">
-            <input id="email-field" name="email-field" type="text" placeholder="Correo electrónico o nombre de usuario" class="form-control input-md" required="">
+            <input id="email-field" name="email-field" type="text" placeholder="Correo electrónico o nombre de usuario" class="form-control input-md"  >
               
             </div>
           </div>
@@ -23,7 +23,7 @@
           <div class="form-group">
             <div class="col-md-12">
               <div class="input-group">
-                <input id="password-field" name="password-field" class="form-control" type="text" placeholder="Contraseña" required="">
+                <input id="password-field" name="password-field" class="form-control" type="text" placeholder="Contraseña"  >
                     <span class="input-group-addon">     
                     <input type="checkbox">     
                 </span>
