--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -17,7 +17,7 @@
           <div class="form-group">
             <div class="col-md-12">
               <div class="input-group">
-                <input id="name-field" name="name-field" class="form-control" type="text" placeholder="Nombre completo" required="">
+                <input id="name-field" name="name-field" class="form-control" type="text" placeholder="Nombre completo"  >
                     <span class="input-group-addon">     
                     <input type="checkbox">     
                 </span>
@@ -29,14 +29,14 @@
           <!-- Text input-->
           <div class="form-group">
             <div class="col-md-12">
-            <input type ="email" id="email-field" name="email-field" type="text" placeholder="Correo electrónico" class="form-control input-md" required="">
+            <input type ="email" id="email-field" name="email-field" type="text" placeholder="Correo electrónico" class="form-control input-md"  >
               
             </div>
           </div>
 
           <div class="form-group">
             <div class="col-md-12">
-            <input type ="email" id="email-field" name="email-field" type="text" placeholder="Confirmar correo electrónico" class="form-control input-md" required="">
+            <input type ="email" id="email-field" name="email-field" type="text" placeholder="Confirmar correo electrónico" class="form-control input-md"  >
               
             </div>
           </div>
@@ -44,7 +44,7 @@
           <!-- Text input-->
           <div class="form-group">
             <div class="col-md-12">
-            <input id="username-field" name="username-field" type="text" placeholder="Nombre de usuario" class="form-control input-md" required="">
+            <input id="username-field" name="username-field" type="text" placeholder="Nombre de usuario" class="form-control input-md"  >
               
             </div>
           </div>
@@ -53,7 +53,7 @@
           <div class="form-group">
             <div class="col-md-12">
               <div class="input-group">
-                <input id="password-field" name="password-field" class="form-control" type="text" placeholder="Contraseña" required="">
+                <input id="password-field" name="password-field" class="form-control" type="text" placeholder="Contraseña"  >
                     <span class="input-group-addon">     
                     <input type="checkbox">     
                 </span>
