--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,8 @@
 <app-header></app-header>
 <app-map></app-map>
 <app-aside></app-aside>
+
+<app-nav-option2></app-nav-option2>
+<app-nav-option3></app-nav-option3>
 <app-footer></app-footer>
 </div>
