--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -31,6 +31,9 @@
           <li class="nav-item ">
               <button type = "button" class = "btn btn-safety space visibilidad"> <span></span> Templates </button>
             </li>
+            <li class="nav-item ">
+                <button type = "button" class = "btn btn-safety space visibilidad"> <span></span> Log out </button>
+              </li>
       <li class = "nav-item">
         <button type = "button" class = "btn btn-safety space" (click)="login()"> <span></span> Login </button>
       </li>
