--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,13 +9,13 @@
 
       <ul class="navbar-nav mr-auto">
           <li class="nav-item ">
-            <a class="nav-link" href="#">Inicio</a>
+            <a class="nav-link">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Quienes somos?</a>
+            <a class="nav-link">Quienes somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link">Contacto</a>
           </li>
 
 
