--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,21 +1,132 @@
 <div class="navbar navbar-expand-lg navbar-dark bg-safety" style="text-align:center">
-  <a class="navbar-brand" href="#"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;"> {{title}} </font> </font> </a>
   
+  <div  class = "collapse navbar-collapse show" >
+  
+    <button class = " visibility navbar-toggler" type = "button" data-toggle = "collapse" data-target = "# navbarColor01" aria-controls = "navbarColor01" aria-expand = "false" aria-label = "Navegación de palanca " (click)="toggleNavbar()">
+          <span class = "navbar-toggler-icon"> </span>
+    </button>
+
+  <a class="navbar-brand" href="#"> 
+
+  <svg height="40px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 512.005 512.005" style="enable-background:new 0 0 512.005 512.005;" xml:space="preserve">
+<path style="fill:#303C42;" d="M440.888,64.609l-181.333-64c-2.292-0.812-4.813-0.812-7.104,0l-181.333,64
+	c-4.26,1.51-7.115,5.542-7.115,10.063v128c0,165.646,24.563,226.188,187.198,308.188c1.51,0.76,3.156,1.146,4.802,1.146
+	c1.646,0,3.292-0.385,4.802-1.146c162.635-82,187.198-142.542,187.198-308.188v-128C448.003,70.151,445.148,66.12,440.888,64.609z"
+	/>
+<path style="fill:#1E88E5;" d="M256.003,21.984L85.336,82.224v120.448c0,19.303,0.318,36.962,1.115,53.328h169.552V21.984z"/>
+<path style="fill:#01579B;" d="M425.555,256c0.797-16.366,1.115-34.025,1.115-53.328V82.224l-170.667-60.24V256H425.555z"/>
+<path style="fill:#1E88E5;" d="M256.003,256v233.38C388.137,422.014,419.801,374.145,425.555,256H256.003z"/>
+<path style="fill:#01579B;" d="M86.451,256c5.754,118.145,37.418,166.014,169.552,233.38V256H86.451z"/>
+<path style="opacity:0.1;enable-background:new    ;" d="M256.003,448.005C105.565,371.307,85.336,341.286,85.336,182.63v20.042
+	c0,158.656,20.229,210.01,170.667,286.708c150.438-76.698,170.667-128.052,170.667-286.708V182.63
+	C426.669,341.286,406.44,371.307,256.003,448.005z"/>
+<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="-45.2066" y1="639.8678" x2="-25.9781" y2="630.9016" gradientTransform="matrix(21.3333 0 0 -21.3333 996.2804 13791.7256)">
+	<stop  offset="0" style="stop-color:#FFFFFF;stop-opacity:0.2"/>
+	<stop  offset="1" style="stop-color:#FFFFFF;stop-opacity:0"/>
+</linearGradient>
+<path style="fill:url(#SVGID_1_);" d="M440.888,64.609l-181.333-64c-2.292-0.812-4.813-0.812-7.104,0l-181.333,64
+	c-4.26,1.51-7.115,5.542-7.115,10.063v128c0,165.646,24.563,226.188,187.198,308.188c1.51,0.76,3.156,1.146,4.802,1.146
+	c1.646,0,3.292-0.385,4.802-1.146c162.635-82,187.198-142.542,187.198-308.188v-128C448.003,70.151,445.148,66.12,440.888,64.609z"
+	/>
+
+</svg>
+    <font style = "vertical-align: inherit;"><font style = "vertical-align: inherit;"> {{title}} </font> </font> 
+  </a>
+
   <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "# navbarColor01" aria-controls = "navbarColor01" aria-expand = "false" aria-label = "Navegación de palanca " (click)="toggleNavbar()">
-    <span class = "navbar-toggler-icon"> </span>
+      <span class = "navbar-toggler-icon"> </span>
   </button>
+  </div>
 
   <div class = "collapse navbar-collapse show " id = "navbarColor01" [ngClass]="{ 'show': navbarOpen }">
-
       <ul class="navbar-nav mr-auto">
-          <li class="nav-item ">
-            <a class="nav-link">Inicio</a>
+          <li class="space nav-item ">
+            <a class="nav-link">
+                <span>
+
+                    <svg height="20px" width="20px" x="0px" y="0px"
+                    viewBox="0 0 460.298 460.297" style="enable-background:new 0 0 460.298 460.297;"
+                    xml:space="preserve">
+                 <g>
+                   <g>
+                     <path fill="white" d="M230.149,120.939L65.986,256.274c0,0.191-0.048,0.472-0.144,0.855c-0.094,0.38-0.144,0.656-0.144,0.852v137.041
+                       c0,4.948,1.809,9.236,5.426,12.847c3.616,3.613,7.898,5.431,12.847,5.431h109.63V303.664h73.097v109.64h109.629
+                       c4.948,0,9.236-1.814,12.847-5.435c3.617-3.607,5.432-7.898,5.432-12.847V257.981c0-0.76-0.104-1.334-0.288-1.707L230.149,120.939
+                       z"/>
+                     <path fill="white" d="M457.122,225.438L394.6,173.476V56.989c0-2.663-0.856-4.853-2.574-6.567c-1.704-1.712-3.894-2.568-6.563-2.568h-54.816
+                       c-2.666,0-4.855,0.856-6.57,2.568c-1.711,1.714-2.566,3.905-2.566,6.567v55.673l-69.662-58.245
+                       c-6.084-4.949-13.318-7.423-21.694-7.423c-8.375,0-15.608,2.474-21.698,7.423L3.172,225.438c-1.903,1.52-2.946,3.566-3.14,6.136
+                       c-0.193,2.568,0.472,4.811,1.997,6.713l17.701,21.128c1.525,1.712,3.521,2.759,5.996,3.142c2.285,0.192,4.57-0.476,6.855-1.998
+                       L230.149,95.817l197.57,164.741c1.526,1.328,3.521,1.991,5.996,1.991h0.858c2.471-0.376,4.463-1.43,5.996-3.138l17.703-21.125
+                       c1.522-1.906,2.189-4.145,1.991-6.716C460.068,229.007,459.021,226.961,457.122,225.438z"/>
+                   </g>
+                 </g>
+                 </svg>
+    
+                </span>
+              Inicio</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link">Quienes somos?</a>
+          <li class=" space nav-item">
+            <a class="nav-link">
+                <span>
+
+                    <svg height="20px" width="20px" x="0px" y="0px"
+                    viewBox="0 0 23.625 23.625" style="enable-background:new 0 0 23.625 23.625;" xml:space="preserve">
+                 <g>
+                   <path  fill="white" d="M11.812,0C5.289,0,0,5.289,0,11.812s5.289,11.813,11.812,11.813s11.813-5.29,11.813-11.813
+                     S18.335,0,11.812,0z M14.271,18.307c-0.608,0.24-1.092,0.422-1.455,0.548c-0.362,0.126-0.783,0.189-1.262,0.189
+                     c-0.736,0-1.309-0.18-1.717-0.539s-0.611-0.814-0.611-1.367c0-0.215,0.015-0.435,0.045-0.659c0.031-0.224,0.08-0.476,0.147-0.759
+                     l0.761-2.688c0.067-0.258,0.125-0.503,0.171-0.731c0.046-0.23,0.068-0.441,0.068-0.633c0-0.342-0.071-0.582-0.212-0.717
+                     c-0.143-0.135-0.412-0.201-0.813-0.201c-0.196,0-0.398,0.029-0.605,0.09c-0.205,0.063-0.383,0.12-0.529,0.176l0.201-0.828
+                     c0.498-0.203,0.975-0.377,1.43-0.521c0.455-0.146,0.885-0.218,1.29-0.218c0.731,0,1.295,0.178,1.692,0.53
+                     c0.395,0.353,0.594,0.812,0.594,1.376c0,0.117-0.014,0.323-0.041,0.617c-0.027,0.295-0.078,0.564-0.152,0.811l-0.757,2.68
+                     c-0.062,0.215-0.117,0.461-0.167,0.736c-0.049,0.275-0.073,0.485-0.073,0.626c0,0.356,0.079,0.599,0.239,0.728
+                     c0.158,0.129,0.435,0.194,0.827,0.194c0.185,0,0.392-0.033,0.626-0.097c0.232-0.064,0.4-0.121,0.506-0.17L14.271,18.307z
+                      M14.137,7.429c-0.353,0.328-0.778,0.492-1.275,0.492c-0.496,0-0.924-0.164-1.28-0.492c-0.354-0.328-0.533-0.727-0.533-1.193
+                     c0-0.465,0.18-0.865,0.533-1.196c0.356-0.332,0.784-0.497,1.28-0.497c0.497,0,0.923,0.165,1.275,0.497
+                     c0.353,0.331,0.53,0.731,0.53,1.196C14.667,6.703,14.49,7.101,14.137,7.429z"/>
+                 </g>
+                 </svg>
+    
+                </span>
+              Quienes somos?</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link">Contacto</a>
+          
+          <li class="space  nav-item">
+              <a class="nav-link">
+                
+                  <span>
+                      <svg height="20px" width="20px"  x="0px" y="0px"
+                          viewBox="0 0 511.882 511.882" style="enable-background:new 0 0 511.882 511.882;" xml:space="preserve">
+                       <g>
+                         <g>
+                           <g>
+                             <path  fill="white" d="M389.898,430.449l-86.29-57.527c-3.86-2.548-9.03-1.709-11.886,1.929l-25.125,32.302
+                               c-8.143,10.612-22.839,13.641-34.514,7.113l-4.645-2.551c-16.759-9.143-37.623-20.517-79.04-61.934
+                               c-41.417-41.417-52.8-62.281-61.934-79.049l-2.56-4.645c-6.527-11.672-3.498-26.366,7.113-34.505l32.293-25.134
+                               c3.642-2.854,4.482-8.026,1.929-11.886l-57.518-86.299c-2.616-3.916-7.843-5.094-11.886-2.679l-36.105,21.65
+                               c-7.746,4.521-13.443,11.863-15.899,20.489c-11.858,43.182-1.883,118.793,112.96,233.646s190.437,124.846,233.655,112.978
+                               c8.628-2.459,15.969-8.159,20.489-15.909l21.641-36.105C394.997,438.293,393.818,433.063,389.898,430.449z"/>
+                             <path  fill="white" d="M510.425,15.156c-0.946-0.946-2.234-1.471-3.572-1.456H123.767c-1.338-0.015-2.626,0.51-3.572,1.456
+                               c-0.946,0.946-1.471,2.234-1.456,3.572V151.83l21.723,32.585c7.835,11.838,5.26,27.708-5.915,36.462l-32.265,25.134
+                               c-3.454,2.62-4.458,7.38-2.359,11.173l2.633,4.8c8.395,15.966,18.635,30.892,30.51,44.471h373.787
+                               c2.743,0.02,4.988-2.176,5.029-4.919V18.728C511.897,17.39,511.372,16.102,510.425,15.156z M250.661,181.434v-0.046
+                               l-93.659,100.343c-3.444,3.694-9.23,3.896-12.923,0.453c-3.694-3.444-3.896-9.23-0.453-12.923l93.659-100.297
+                               c3.444-3.694,9.23-3.896,12.923-0.453C253.902,171.955,254.105,177.741,250.661,181.434z M315.31,174.23
+                               c-6.589,0.03-13.009-2.088-18.286-6.034L144.211,52.319c-4.024-3.065-4.802-8.812-1.737-12.837
+                               c3.065-4.024,8.812-4.802,12.837-1.737l152.75,115.877c4.323,3.141,10.177,3.141,14.501,0L475.356,37.745
+                               c4.024-3.052,9.761-2.264,12.814,1.76s2.264,9.761-1.76,12.814L333.596,168.196C328.319,172.142,321.9,174.26,315.31,174.23z
+                                M487.123,282.18c-1.773,1.656-4.132,2.539-6.557,2.455c-2.425-0.084-4.717-1.128-6.371-2.903l-93.65-100.343
+                               c-3.182-3.729-2.856-9.304,0.737-12.637c3.594-3.334,9.177-3.24,12.657,0.212l93.632,100.297
+                               C491.013,272.952,490.813,278.735,487.123,282.18z"/>
+                           </g>
+                         </g>
+                       </g>
+                       </svg>
+                      </span>
+                
+                Contacto</a>
           </li>
 
 
@@ -35,11 +146,32 @@
                 <button type = "button" class = "btn btn-safety space visibilidad"> <span></span> Log out </button>
               </li>
       <li class = "nav-item">
-        <button type = "button" class = "btn btn-safety space" (click)="login()"> <span></span> Login </button>
+        <button type = "button" class = "btn btn-safety space" (click)="login()"> 
+          <span>
+              <svg height="20px" viewBox="0 0 512 512" width="20px" xmlns="http://www.w3.org/2000/svg"><path fill="white" d="m465.535156.320312c-.53125-.042968-.980468-.320312-1.535156-.320312h-229.332031c-35.285157 0-64 28.714844-64 64v21.332031c0 11.777344 9.554687 21.335938 21.332031 21.335938s21.332031-9.558594 21.332031-21.335938v-21.332031c0-11.753906 9.578125-21.332031 21.335938-21.332031h99.390625l-6.507813 2.175781c-17.277343 5.972656-28.882812 22.25-28.882812 40.488281v320h-64c-11.757813 0-21.335938-9.578125-21.335938-21.332031v-42.667969c0-11.773437-9.554687-21.332031-21.332031-21.332031s-21.332031 9.558594-21.332031 21.332031v42.667969c0 35.285156 28.714843 64 64 64h64v21.332031c0 23.53125 19.132812 42.667969 42.664062 42.667969 4.566407 0 8.898438-.660156 13.589844-2.113281l128.171875-42.730469c17.300781-5.972656 28.90625-22.25 28.90625-40.488281v-384c0-24.875-21.441406-44.375-46.464844-42.347657zm0 0"/><path fill="white" d="m228.414062 198.25-85.332031-85.332031c-6.101562-6.101563-15.273437-7.9375-23.253906-4.628907-7.957031 3.304688-13.160156 11.09375-13.160156 19.710938v64h-85.335938c-11.773437 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.558594 21.335938 21.332031 21.335938h85.335938v64c0 8.617187 5.203125 16.402343 13.160156 19.710937 7.980469 3.304688 17.152344 1.472656 23.253906-4.628906l85.332031-85.335938c8.34375-8.339843 8.34375-21.820312 0-30.164062zm0 0"/></svg>
+          </span> Login </button>
       </li>
-      <span></span>
+     
+      
       <li class = "nav-item">
-        <button type = "button" class = "btn btn-safety space" (click)="signup()"> <span></span> Sign Up  </button>
+        <button type = "button" class = "btn btn-safety space" (click)="signup()"> 
+          <span>
+              <svg x="0px" y="0px"
+              width="20px" height="20px" viewBox="0 0 27.021 27.022" style="enable-background:new 0 0 27.021 27.022;"
+              xml:space="preserve">
+           <g>
+             <g>
+               <path  fill="white" d="M17.855,21.223c0-1.902,1.049-3.55,2.588-4.44c-0.963-0.308-2-0.552-3.09-0.722c2.342-1.299,3.929-3.794,3.929-6.663
+                 c0-4.207-3.41-7.617-7.617-7.617s-7.617,3.41-7.617,7.617c0,2.868,1.587,5.364,3.929,6.663C4.223,16.958,0,19.897,0,23.389h18.35
+                 C18.041,22.727,17.855,22,17.855,21.223z"/>
+             </g>
+             <path  fill="white" d="M23.004,17.206c-2.218,0-4.018,1.797-4.018,4.018c0,2.219,1.8,4.017,4.018,4.017c2.219,0,4.018-1.798,4.018-4.017
+               C27.02,19.002,25.223,17.206,23.004,17.206z M25.627,21.936h-1.909v1.91h-1.427v-1.91h-1.91v-1.429h1.91v-1.911h1.427v1.911h1.909
+               V21.936z"/>
+           </g>
+           </svg>
+           
+          </span> Sign Up  </button>
       </li>
       
     </ul>
