introduction to routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <div class="container fondo">
-<router-outlet></router-outlet>
 <app-header></app-header>
 <app-map></app-map>
 <app-aside></app-aside>
 
-<app-nav-option2></app-nav-option2>
-<app-nav-option3></app-nav-option3>
+<div class="modal-body"><form class="form-horizontal"><app-nav-option2></app-nav-option2></form></div>
+<div class="modal-body"><form class="form-horizontal"><app-nav-option3></app-nav-option3></form></div>
+
 <app-footer></app-footer>
+
 </div>
