--- a/src/app/components/report/report.component.html
+++ b/src/app/components/report/report.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<div class="modal-header maximo">
     <h4 class="modal-title">Reportaje de {{incidente}}</h4>
   </div>
   <div class="modal-body">
