--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<div class="modal-header maximo">
     <h4 class="modal-title">Registrate!</h4>
     <!-- <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
